Free5gc/pcf-envoy.yaml
node:
  id: default
  cluster: client
admin:
  access_log_path: /tmp/admin_access6.log
  address:
    socket_address:
      protocol: TCP
      address: 127.0.0.1
      port_value: 10006
static_resources:
  listeners:
  - name: ingress
    address:
      socket_address:
        address: 127.0.1.7
        port_value: 8000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: "/dev/stdout"
          route_config:
            name: pcf
            virtual_hosts:
              - name: pcf
                domains: ["*"]
                routes:
                  - match:
                      prefix: "/nnrf"
                    route:
                      cluster: nrf
                  - match:
                      prefix: "/namf"
                    route:
                      cluster: amf
                  - match:
                      prefix: "/nausf"
                    route:
                      cluster: ausf
                  - match:
                      prefix: "/nnssf"
                    route:
                      cluster: nssf
                  - match:
                      prefix: "/nudm"
                    route:
                      cluster: udm
                  - match:
                      prefix: "/npcf"
                    route:
                      cluster: pcf
                  - match:
                      prefix: "/nsmf"
                    route:
                      cluster: smf
                  - match:
                      prefix: "/nudr"
                    route:
                      cluster: udr
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  - name: ingress_free5gc
    address:
      socket_address:
        address: 127.0.2.7
        port_value: 8000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_free5gc
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: "/dev/stdout"
          route_config:
            name: pcf
            virtual_hosts:
              - name: pcf
                domains: ["*"]
                routes:
                  - match:
                      prefix: "/nnrf"
                    route:
                      cluster: nrf
                  - match:
                      prefix: "/namf"
                    route:
                      cluster: amf
                  - match:
                      prefix: "/nausf"
                    route:
                      cluster: ausf
                  - match:
                      prefix: "/nnssf"
                    route:
                      cluster: nssf
                  - match:
                      prefix: "/nudm"
                    route:
                      cluster: udm
                  - match:
                      prefix: "/npcf"
                    route:
                      cluster: pcf
                  - match:
                      prefix: "/nsmf"
                    route:
                      cluster: smf
                  - match:
                      prefix: "/nudr"
                    route:
                      cluster: udr
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificate_sds_secret_configs:
            - name: spiffe://example.org/pcf
              sds_config:
                resource_api_version: V3
                api_config_source:
                  api_type: gRPC
                  transport_api_version: V3 
                  grpc_services:
                    envoy_grpc:
                      cluster_name: spire_agent
  clusters:
  - name: nrf
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: nrf
      endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: 127.0.1.10
                  port_value: 8000
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          tls_certificate_sds_secret_configs:
          - name: spiffe://example.org/pcf
            sds_config:
              resource_api_version: V3
              api_config_source:
                api_type: gRPC
                transport_api_version: V3
                grpc_services:
                  envoy_grpc:
                    cluster_name: spire_agent
  - name: amf
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: amf
      endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: 127.0.2.18
                  port_value: 8000
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          tls_certificate_sds_secret_configs:
          - name: spiffe://example.org/pcf
            sds_config:
              resource_api_version: V3
              api_config_source:
                api_type: gRPC
                transport_api_version: V3
                grpc_services:
                  envoy_grpc:
                    cluster_name: spire_agent
  - name: ausf
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: ausf
      endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: 127.0.2.9
                  port_value: 8000
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          tls_certificate_sds_secret_configs:
          - name: spiffe://example.org/pcf
            sds_config:
              resource_api_version: V3
              api_config_source:
                api_type: gRPC
                transport_api_version: V3
                grpc_services:
                  envoy_grpc:
                    cluster_name: spire_agent
  - name: nssf
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: nssf
      endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: 127.0.2.31
                  port_value: 8000
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          tls_certificate_sds_secret_configs:
          - name: spiffe://example.org/pcf
            sds_config:
              resource_api_version: V3
              api_config_source:
                api_type: gRPC
                transport_api_version: V3
                grpc_services:
                  envoy_grpc:
                    cluster_name: spire_agent
  - name: udm
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: udm
      endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: 127.0.2.3
                  port_value: 8000
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          tls_certificate_sds_secret_configs:
          - name: spiffe://example.org/pcf
            sds_config:
              resource_api_version: V3
              api_config_source:
                api_type: gRPC
                transport_api_version: V3
                grpc_services:
                  envoy_grpc:
                    cluster_name: spire_agent
  - name: pcf
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: pcf
      endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: 127.0.0.7
                  port_value: 8000
  - name: smf
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: smf
      endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: 127.0.2.2
                  port_value: 8000
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          tls_certificate_sds_secret_configs:
          - name: spiffe://example.org/pcf
            sds_config:
              resource_api_version: V3
              api_config_source:
                api_type: gRPC
                transport_api_version: V3
                grpc_services:
                  envoy_grpc:
                    cluster_name: spire_agent
  - name: udr
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: udr
      endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: 127.0.2.4
                  port_value: 8000
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          tls_certificate_sds_secret_configs:
          - name: spiffe://example.org/pcf
            sds_config:
              resource_api_version: V3
              api_config_source:
                api_type: gRPC
                transport_api_version: V3
                grpc_services:
                  envoy_grpc:
                    cluster_name: spire_agent
  - name: spire_agent
    connect_timeout: 0.25s
    http2_protocol_options: {}
    load_assignment:
      cluster_name: spire_agent
      endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                pipe:
                  path: /tmp/spire-agent/public/api.sock
